--- a/scraping_analysis.ipynb
+++ b/scraping_analysis.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "83808fc0",
    "metadata": {},
    "outputs": [],
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "71ce762e",
    "metadata": {},
    "outputs": [],
@@ -171,6 +171,224 @@
    "id": "9a30a5b5",
    "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "160af71f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "quote = scrape_quotes_page(url= \"http://quotes.toscrape.com/page/1\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "b11317f9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame(quote)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "7362686b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>quote</th>\n",
+       "      <th>author</th>\n",
+       "      <th>tags</th>\n",
+       "      <th>num_tags</th>\n",
+       "      <th>quote_length</th>\n",
+       "      <th>word_count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>“The world as we have created it is a process ...</td>\n",
+       "      <td>Albert Einstein</td>\n",
+       "      <td>change, deep-thoughts, thinking, world</td>\n",
+       "      <td>4</td>\n",
+       "      <td>115</td>\n",
+       "      <td>21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>“It is our choices, Harry, that show what we t...</td>\n",
+       "      <td>J.K. Rowling</td>\n",
+       "      <td>abilities, choices</td>\n",
+       "      <td>2</td>\n",
+       "      <td>85</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>“There are only two ways to live your life. On...</td>\n",
+       "      <td>Albert Einstein</td>\n",
+       "      <td>inspirational, life, live, miracle, miracles</td>\n",
+       "      <td>5</td>\n",
+       "      <td>131</td>\n",
+       "      <td>26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>“The person, be it gentleman or lady, who has ...</td>\n",
+       "      <td>Jane Austen</td>\n",
+       "      <td>aliteracy, books, classic, humor</td>\n",
+       "      <td>4</td>\n",
+       "      <td>104</td>\n",
+       "      <td>19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>“Imperfection is beauty, madness is genius and...</td>\n",
+       "      <td>Marilyn Monroe</td>\n",
+       "      <td>be-yourself, inspirational</td>\n",
+       "      <td>2</td>\n",
+       "      <td>111</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>“Try not to become a man of success. Rather be...</td>\n",
+       "      <td>Albert Einstein</td>\n",
+       "      <td>adulthood, success, value</td>\n",
+       "      <td>3</td>\n",
+       "      <td>67</td>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>“It is better to be hated for what you are tha...</td>\n",
+       "      <td>André Gide</td>\n",
+       "      <td>life, love</td>\n",
+       "      <td>2</td>\n",
+       "      <td>82</td>\n",
+       "      <td>19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>“I have not failed. I've just found 10,000 way...</td>\n",
+       "      <td>Thomas A. Edison</td>\n",
+       "      <td>edison, failure, inspirational, paraphrased</td>\n",
+       "      <td>4</td>\n",
+       "      <td>65</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>“A woman is like a tea bag; you never know how...</td>\n",
+       "      <td>Eleanor Roosevelt</td>\n",
+       "      <td>misattributed-eleanor-roosevelt</td>\n",
+       "      <td>1</td>\n",
+       "      <td>85</td>\n",
+       "      <td>19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>“A day without sunshine is like, you know, nig...</td>\n",
+       "      <td>Steve Martin</td>\n",
+       "      <td>humor, obvious, simile</td>\n",
+       "      <td>3</td>\n",
+       "      <td>50</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                               quote             author  \\\n",
+       "0  “The world as we have created it is a process ...    Albert Einstein   \n",
+       "1  “It is our choices, Harry, that show what we t...       J.K. Rowling   \n",
+       "2  “There are only two ways to live your life. On...    Albert Einstein   \n",
+       "3  “The person, be it gentleman or lady, who has ...        Jane Austen   \n",
+       "4  “Imperfection is beauty, madness is genius and...     Marilyn Monroe   \n",
+       "5  “Try not to become a man of success. Rather be...    Albert Einstein   \n",
+       "6  “It is better to be hated for what you are tha...         André Gide   \n",
+       "7  “I have not failed. I've just found 10,000 way...   Thomas A. Edison   \n",
+       "8  “A woman is like a tea bag; you never know how...  Eleanor Roosevelt   \n",
+       "9  “A day without sunshine is like, you know, nig...       Steve Martin   \n",
+       "\n",
+       "                                           tags  num_tags  quote_length  \\\n",
+       "0        change, deep-thoughts, thinking, world         4           115   \n",
+       "1                            abilities, choices         2            85   \n",
+       "2  inspirational, life, live, miracle, miracles         5           131   \n",
+       "3              aliteracy, books, classic, humor         4           104   \n",
+       "4                    be-yourself, inspirational         2           111   \n",
+       "5                     adulthood, success, value         3            67   \n",
+       "6                                    life, love         2            82   \n",
+       "7   edison, failure, inspirational, paraphrased         4            65   \n",
+       "8               misattributed-eleanor-roosevelt         1            85   \n",
+       "9                        humor, obvious, simile         3            50   \n",
+       "\n",
+       "   word_count  \n",
+       "0          21  \n",
+       "1          16  \n",
+       "2          26  \n",
+       "3          19  \n",
+       "4          16  \n",
+       "5          14  \n",
+       "6          19  \n",
+       "7          12  \n",
+       "8          19  \n",
+       "9           9  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "73af652b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(10, 6)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
   }
  ],
  "metadata": {
@@ -189,7 +407,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
