cleaning empty cells and replacing empty values

--- a/scraping_analysis.ipynb
+++ b/scraping_analysis.ipynb
@@ -389,6 +389,48 @@
    "source": [
     "df.shape"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "317e05e9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                                                                                                                 quote             author                                          tags  num_tags  quote_length  word_count\n",
+      "0                  “The world as we have created it is a process of our thinking. It cannot be changed without changing our thinking.”    Albert Einstein        change, deep-thoughts, thinking, world         4           115          21\n",
+      "1                                                “It is our choices, Harry, that show what we truly are, far more than our abilities.”       J.K. Rowling                            abilities, choices         2            85          16\n",
+      "2  “There are only two ways to live your life. One is as though nothing is a miracle. The other is as though everything is a miracle.”    Albert Einstein  inspirational, life, live, miracle, miracles         5           131          26\n",
+      "3                             “The person, be it gentleman or lady, who has not pleasure in a good novel, must be intolerably stupid.”        Jane Austen              aliteracy, books, classic, humor         4           104          19\n",
+      "4                      “Imperfection is beauty, madness is genius and it's better to be absolutely ridiculous than absolutely boring.”     Marilyn Monroe                    be-yourself, inspirational         2           111          16\n",
+      "5                                                                  “Try not to become a man of success. Rather become a man of value.”    Albert Einstein                     adulthood, success, value         3            67          14\n",
+      "6                                                   “It is better to be hated for what you are than to be loved for what you are not.”         André Gide                                    life, love         2            82          19\n",
+      "7                                                                    “I have not failed. I've just found 10,000 ways that won't work.”   Thomas A. Edison   edison, failure, inspirational, paraphrased         4            65          12\n",
+      "8                                                “A woman is like a tea bag; you never know how strong it is until it's in hot water.”  Eleanor Roosevelt               misattributed-eleanor-roosevelt         1            85          19\n",
+      "9                                                                                   “A day without sunshine is like, you know, night.”       Steve Martin                        humor, obvious, simile         3            50           9\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Q2. Data Cleaning: Check for and handle any issues in the data\n",
+    "##cleaning of empty cells\n",
+    "new_df = df.dropna()\n",
+    "print(new_df.to_string())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "d9188714",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## replacing empty values with a number\n",
+    "df.fillna(0, inplace = True) "
+   ]
   }
  ],
  "metadata": {
