third question answered

--- a/scraping_analysis.ipynb
+++ b/scraping_analysis.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "83808fc0",
    "metadata": {},
    "outputs": [],
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "71ce762e",
    "metadata": {},
    "outputs": [],
@@ -167,6 +167,14 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6a12800a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "9a30a5b5",
    "metadata": {},
@@ -174,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "160af71f",
    "metadata": {},
    "outputs": [],
@@ -184,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "b11317f9",
    "metadata": {},
    "outputs": [],
@@ -371,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "73af652b",
    "metadata": {},
    "outputs": [
@@ -381,7 +389,7 @@
        "(10, 6)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -392,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "317e05e9",
    "metadata": {},
    "outputs": [
@@ -423,13 +431,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "id": "d9188714",
    "metadata": {},
    "outputs": [],
    "source": [
     "## replacing empty values with a number\n",
     "df.fillna(0, inplace = True) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "d54fd6c6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "author\n",
+       "Albert Einstein    3\n",
+       "J.K. Rowling       1\n",
+       "Jane Austen        1\n",
+       "Marilyn Monroe     1\n",
+       "André Gide         1\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## Q3. Find the top 5 authors with the most quotes\n",
+    "df['author'].value_counts().head(5)"
    ]
   }
  ],
