--- a/scraping_analysis.ipynb
+++ b/scraping_analysis.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "id": "83808fc0",
    "metadata": {},
    "outputs": [],
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "id": "71ce762e",
    "metadata": {},
    "outputs": [],
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "id": "160af71f",
    "metadata": {},
    "outputs": [],
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "b11317f9",
    "metadata": {},
    "outputs": [],
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "id": "7362686b",
    "metadata": {},
    "outputs": [
@@ -368,7 +368,7 @@
        "9           9  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "id": "73af652b",
    "metadata": {},
    "outputs": [
@@ -389,7 +389,7 @@
        "(10, 6)"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 9,
    "id": "317e05e9",
    "metadata": {},
    "outputs": [
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 10,
    "id": "d9188714",
    "metadata": {},
    "outputs": [
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 11,
    "id": "d54fd6c6",
    "metadata": {},
    "outputs": [
@@ -474,7 +474,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "fc1c2537",
    "metadata": {},
    "outputs": [
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
    "id": "241a4318",
    "metadata": {},
    "outputs": [
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 14,
    "id": "3af17d40",
    "metadata": {},
    "outputs": [
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 15,
    "id": "1dd1e4d6",
    "metadata": {},
    "outputs": [
@@ -571,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 16,
    "id": "04c966d8",
    "metadata": {},
    "outputs": [
@@ -596,6 +596,25 @@
    ],
    "source": [
     "print(df['tags'].value_counts())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "3801bd12",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['change, deep-thoughts, thinking, world', 'abilities, choices', 'inspirational, life, live, miracle, miracles', 'aliteracy, books, classic, humor', 'be-yourself, inspirational', 'adulthood, success, value', 'life, love', 'edison, failure, inspirational, paraphrased', 'misattributed-eleanor-roosevelt', 'humor, obvious, simile']\n"
+     ]
+    }
+   ],
+   "source": [
+    "tags_column = df['tags'].tolist()\n",
+    "print(tags_column)"
    ]
   }
  ],
