--- a/scraping_analysis.ipynb
+++ b/scraping_analysis.ipynb
@@ -167,14 +167,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6a12800a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "9a30a5b5",
    "metadata": {},
@@ -600,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 36,
    "id": "3801bd12",
    "metadata": {},
    "outputs": [
@@ -615,6 +607,104 @@
    "source": [
     "tags_column = df['tags'].tolist()\n",
     "print(tags_column)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "54f9401f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_tags =['change, deep-thoughts, thinking, world', 'abilities, choices', 'inspirational, life, live, miracle, miracles', 'aliteracy, books, classic, humor', 'be-yourself, inspirational', 'adulthood, success, value', 'life, love', 'edison, failure, inspirational, paraphrased', 'misattributed-eleanor-roosevelt', 'humor, obvious, simile']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "id": "fa27cd9b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['change', 'deep-thoughts', 'thinking', 'world', 'abilities', 'choices', 'inspirational', 'life', 'live', 'miracle', 'miracles', 'aliteracy', 'books', 'classic', 'humor', 'be-yourself', 'inspirational', 'adulthood', 'success', 'value', 'life', 'love', 'edison', 'failure', 'inspirational', 'paraphrased', 'misattributed-eleanor-roosevelt', 'humor', 'obvious', 'simile']\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "clean_list = []\n",
+    "for tag in all_tags:\n",
+    "    ##removing the quotes making it a list of variables instead of list of strings\n",
+    "   split_tags = tag.split(',')\n",
+    "   ## removing extra space and converting to lowecase\n",
+    "   clean_tags = [t.strip().lower() for t in split_tags] \n",
+    "   #adding all the changes to the new list created above\n",
+    "   clean_list.extend(clean_tags)\n",
+    "    \n",
+    "print(clean_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "id": "c0231a3b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Counter({'inspirational': 3, 'life': 2, 'humor': 2, 'change': 1, 'deep-thoughts': 1, 'thinking': 1, 'world': 1, 'abilities': 1, 'choices': 1, 'live': 1, 'miracle': 1, 'miracles': 1, 'aliteracy': 1, 'books': 1, 'classic': 1, 'be-yourself': 1, 'adulthood': 1, 'success': 1, 'value': 1, 'love': 1, 'edison': 1, 'failure': 1, 'paraphrased': 1, 'misattributed-eleanor-roosevelt': 1, 'obvious': 1, 'simile': 1})\n"
+     ]
+    }
+   ],
+   "source": [
+    "##giving a count of each element in the list\n",
+    "from collections import Counter\n",
+    "print(Counter(clean_list))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "012187ad",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('inspirational', 3), ('life', 2), ('humor', 2), ('change', 1), ('deep-thoughts', 1)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "##fetching the 5 most common tags\n",
+    "x = Counter(clean_list)\n",
+    "most_common_tag= x.most_common(5)\n",
+    "print(most_common_tag)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "157cec1f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30\n"
+     ]
+    }
+   ],
+   "source": [
+    "##I want to know the number of tags in the clean list\n",
+    "print (len(clean_list))"
    ]
   }
  ],
